--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 
 before_script:
 - cp ~/build/CiscoSecurity/tr-05-gigamon-threatinsight/tests/functional/project.properties.sample ~/build/CiscoSecurity/project.properties
+- sed -i "s|ctr_hostname=.*|ctr_hostname=$ctr_hostname|" ~/build/CiscoSecurity/project.properties
 - sed -i "s|ctr_client_id=.*|ctr_client_id=$ctr_client_id|" ~/build/CiscoSecurity/project.properties
 - sed -i "s|ctr_client_password=.*|ctr_client_password=$ctr_client_password|" ~/build/CiscoSecurity/project.properties
 
