--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -9,6 +9,7 @@
         "profile_name": "serverless",
         "project_name": "tr-gigamon-threatinsight-relay",
         "runtime": "python3.7",
+        "role_name": "tr-serverless-relay-ZappaLambdaExecutionRole",
         "s3_bucket": "zappa-tr-gigamon-threatinsight-relay"
     }
 }
