--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,4 +1,4 @@
-Flask==1.1.2
+Flask==2.0.1
 marshmallow==3.11.1
 requests==2.25.1
 flake8==3.9.0
@@ -6,4 +6,4 @@ coverage==5.5.0
 pytest==6.2.2
 cryptography==3.3.2
 pyjwt[crypto]==2.0.1
-Werkzeug==1.0.1
+freezegun==1.1.0
